# MeetManager-Tools

./: .cursorrules  .dockerignore  .gitignore  ARCHITECTURE.md  Justfile  README.md  ci.Dockerfile  docker-compose.yml  package.json  pyproject.toml
.agent/skills/architecture/: SKILL.md
.agent/skills/linting/: SKILL.md
.agent/skills/testing/: SKILL.md
.agent/skills/tooling/: SKILL.md
.agent/workflows/: pre-commit-check.md
.gemini/skills/architecture/: SKILL.md
.gemini/skills/justfile/: SKILL.md
.gemini/skills/linting/: SKILL.md
.gemini/skills/skill-creator/: SKILL.md
.gemini/skills/testing/: SKILL.md
.gemini/skills/tooling/: SKILL.md
.gemini/skills/type-safety/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/data/: Sample_Data.json
backend/protos/: meet_manager.proto
backend/src/: dataset_loader.py  debug_imports.py  generate_examples.py  generate_test_db.py  generate_weasy_reports.py  meet_manager_pb2.py  meet_manager_pb2_grpc.py  server.py  test_bundle_generation.py  test_client.py  verify_report_generation.py
backend/src/meetmanager/v1/: meet_manager_pb2.py  meet_manager_pb2.pyi  meet_manager_pb2_grpc.py
backend/src/mm_to_json/: download_libs.py  mdb_restorer.py  mdb_writer.py  mm_to_json.py  models.py  report_generator.py
backend/src/mm_to_json/reporting/: config.py  extractor.py  extractor.py_header  playwright_renderer.py  renderer.py  report_definitions.py  weasy_renderer.py
backend/src/mm_to_json/reporting/templates/: entries_club.html  entries_hytek.html  lineups.html  meet_program.html  psych_sheet.html  report_style.css  results.html
backend/src/tests/: test_meet_entries_data.py
backend/src/tmp_test_bundles/html/: BH-TV_Boys_6_&_under.html  BH-TV_Boys_7-8.html  BH-TV_Boys_9-10.html  BH-TV_Girls_6_&_under.html  BH-TV_Girls_7-8.html  BH-TV_Girls_9-10.html  DP-TV_Boys_6_&_under.html  DP-TV_Boys_7-8.html  DP-TV_Boys_9-10.html  DP-TV_Girls_6_&_under.html  DP-TV_Girls_7-8.html  DP-TV_Girls_9-10.html  coaches_program.html  computer_team_program.html  posting_program_boys.html  posting_program_girls.html
backend/tests/: reproduce_nan.py  test_bug_repro.py  test_comprehensive.py  test_data_integrity.py  test_logic.py  test_meet_program.py  test_report_use_cases.py  test_report_validation.py  test_reporting_comprehensive.py  test_server_logic.py  test_ui_correctness.py
backend/tests/fixtures/: Athlete.json  Divisions.json  Entry.json  Event.json  Meet.json  Records.json  RecordsApp.json  Relay.json  RelayNames.json  Scoring.json  Session.json  Sessitem.json  Team.json
backend/tests/scripts/: reproduce_issue_16.py  test_bundle_generation.py
docs/: ARCHITECTURE.md  DEVOPS_CLOUD_ROADMAP.md
mm_to_json/: .gitignore  CMakeLists.txt  README.md  WINDOWS_README.md  compare_json.py  mm_to_json_poc.py
mm_to_json/.github/workflows/: python-app.yml
mm_to_json/mm_to_json/: mmToJsonConverter.cpp  mmToJsonConverter.h  util.h
mm_to_json/mm_to_json_py/: README.md  main.py  pyproject.toml  ruff.toml
mm_to_json/mm_to_json_py/scripts/: README.md  analyze_dump.py  check_autonumber.py  check_dtypes.py  check_meet_id.py  create_template_schema.py  doc_schema.py  download_jars.py  dump_mdb.py  generate_sample_data.py  list_tables.py  restore_mdb.py
mm_to_json/mm_to_json_py/src/mm_to_json/: mdb_restorer.py  mdb_writer.py  mm_to_json.py  report_generator.py
mm_to_json/mm_to_json_py/tests/: README.md  test_comprehensive.py  test_full_cycle.py  test_jackcess_py.py  test_mdb_verification.py  test_meet_program.py  test_recreation.py  test_report_generator.py
mobile-judge-app/: App.tsx  Dockerfile  app.json  package-lock.json  package.json
mobile-judge-app/src/config/: dqCodes.json
mobile-judge-app/src/database/: db.native.ts  db.ts
mobile-judge-app/test/: db.test.ts  journey.test.tsx
mobile-judge-app/test/__mocks__/: expo-sqlite.ts
protos/: buf.yaml  meet_manager.proto
protos/meetmanager/v1/: meet_manager.proto
scripts/: inspect_mdbs.py
tests/backend/: test_data_extraction.py  test_pdf_generation.py  test_report_hydration.py  test_weasy_reporting.py
tests/fixtures/anonymized_meets/: 2024-06-22 BH @ DP Meet2-MeetMgr.json
tests/scripts/: generate_mocks_from_mdb.py  test_converter_standalone.py
web-client/: .biomeignore  .dockerignore  .gitignore  Dockerfile  README.md  biome.json  next.config.mjs  package-lock.json  package.json  vitest.config.ts
web-client/app/: actions.ts  globals.css  layout.tsx  page.tsx
web-client/app/admin/: page.tsx
web-client/app/athletes/: page.tsx
web-client/app/entries/: page.tsx
web-client/app/events/: page.tsx
web-client/app/meets/: page.tsx
web-client/app/relays/: page.tsx
web-client/app/reports/: page.tsx
web-client/app/scores/: page.tsx
web-client/app/sessions/: page.tsx
web-client/app/teams/: page.tsx
web-client/components/: app-sidebar.tsx  athletes-manager.tsx  config-provider.tsx  dashboard.tsx  data-table-faceted-filter.tsx  data-table.tsx  dataset-manager.tsx  entries-manager.test.tsx  entries-manager.tsx  events-manager.tsx  example.test.tsx  meets-manager.tsx  relays-manager.tsx  reports-manager.tsx  scores-manager.test.tsx  scores-manager.tsx  sessions-manager.tsx  teams-manager.tsx
web-client/components/ui/: button-group.tsx  carousel.tsx  chart.tsx  field.tsx  input-group.tsx  input-otp.tsx  item.tsx  navigation-menu.tsx  sidebar.tsx  slider.tsx  (+1 more)
web-client/lib/: mm-client.ts  swim-meet-data.ts  swim-meet-types.ts  utils.ts
(+5 files in other folders)
