[project]
name = "meetmanager-backend"
version = "0.1.0"
description = "Backend for MeetManager Tools"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pytest>=7.0.0",
    "reportlab>=4.0.0",
    "pandas>=2.0.0",
    "protobuf>=4.25.0",
    "ruff>=0.3.0",
    "faker>=20.0.0",
    "pdfplumber>=0.10.0",
    "JPype1>=1.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = [
    "N802", # Function name should be lowercase (gRPC methods match proto)
    "E501", # Line too long (acceptable in complex report generators)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "meetmanager.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "meet_manager_pb2.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "meet_manager_pb2_grpc.*"
ignore_errors = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "types-protobuf>=6.32.1.20251210",
]
